# neuro-clash

./: .gitignore  LICENSE  README.md  workspace.code-workspace
.github/: pull_request_template.md
.github/workflows/: ai-service.yml  api-lint.yml  api-test.yml  (+9 more)
api/: .eslintrc.cjs  Dockerfile  README.md  bun.lockb  package-lock.json  package.json
kubernetes/: api_deployment.yaml  ingress_resource.yaml  ingress_resources.yaml  neuro_ai_deployment.yaml  services.yaml  web-app_deployment.yaml
neuro_ai/: .gitignore  Dockerfile  Makefile  README.md  local.py  neuro_ai.py  pyproject.toml
neuro_ai/behaviors/: concentration.py
neuro_ai/ccl/behaviors/: concentration.py
neuro_ai/ccl/experiments/: antho_live_concentration.py  explorations.ipynb
neuro_ai/ccl/graph/: graph.py
neuro_ai/ccl/models/: eeg.py
neuro_ai/ccl/pre_processing/: data_processing.py  pre_procesing.py  process_data_local.py
neuro_ai/ccl/processing/: data_processing.py  pre_procesing.py
neuro_ai/eeg_recordings/: EEG_recording_concentration_10.csv  EEG_recording_test_raw.fif
neuro_ai/experiments/: antho_live_brainwave.py  antho_live_concentration.py  brainwave.ipynb  calm_detection.py  explorations.ipynb  live.py  live_brainwave.py  plot_lslclient_rt.ipynb  raw_eeg.ipynb  realtime_eeg.ipynb
neuro_ai/pre_processing/: pre_procesing.py
webapp/: .env.production.template  .env.template  .eslintrc.js  .prettierignore  .stylelintrc  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
your-type-app/: .env  package-lock.json  package.json
(+114 files in other folders)
