[tool.poetry]
name = "neuro-ai"
version = "0.1.0"
description = "AI project for the Neuro Clash game"
authors = ["Anthony Richer"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.108.0"
mne = "^1.6.0"
pandas = "^2.1.4"
numpy = "^1.26.3"
uvicorn = "^0.25.0"
loguru = "^0.7.2"
python-socketio = "^5.11.1"


[tool.poetry.group.dev.dependencies]
pylsl = "^1.16.2"
ipykernel = "^6.28.0"
muselsl = "^2.2.2"
tk = "^0.1.0"
isort = "^5.13.2"
ruff = "^0.1.11"
mne-lsl = "^1.1.1"
pyqt5 = "^5.15.10"
pyqt5-qt5 = "^5.15.12"
pyqt5-sip = "^12.13.0"
pyqtgraph = "^0.13.3"
brainflow = "^5.12.0"
flake8-pyproject = "^1.2.3"

[flake8]
ignore = "E501"
max-line-length = 120
extend-ignore = "E203"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
